[project]
name = "wow-character-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.3",
    "psycopg[binary]>=3.2.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.40.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
